added a line in firstBranch

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             <div class="step-text"><a href="https://go.microsoft.com/fwlink/?linkid=862409">Clone your code repository and start developing your application on IDE of your choice</a></div>
                         </div>
                         <div class="step">
+				<h1> Added this line in firstBranch </h1>
                             <div class="step-icon">
                                 <img src="img/deployWhite.svg">
                             </div>
